server/static/wrstat/src/usageTable.css
#usageTable {
	table-layout: fixed;
	width: calc(100% - 2em);
	margin: 4em 1em 1em 1em;
}

#usageTable tbody {
	white-space: nowrap;
}

#usageTable td {
	overflow: hidden;
}

#usageTable .selected td:first-child,
#usageTable .selected td:nth-child(2) {
	white-space: normal;
}

#usageTable td:first-child,
#usageTable td:nth-child(2) {
	text-overflow: ellipsis;
}


#usageTable col:nth-child(3),
#usageTable col:nth-child(4),
#usageTable col:nth-child(8),
#usageTable col:nth-child(9),
#usageTable col:nth-child(10) {
	width: 5em;
}

#usageTable col:nth-child(2),
#usageTable col:nth-child(5),
#usageTable col:nth-child(6) {
	width: 8em;
}

#usageTable col:nth-child(7) {
	width: 9em;
}

#usageTable.noQuota tr> :nth-child(4),
#usageTable.noQuota tr> :nth-child(5),
#usageTable.noQuota tr> :nth-child(7),
#usageTable.noQuota tr> :nth-child(8),
#usageTable.noQuota tr> :nth-child(10) {
	visibility: hidden;
}

#usageTable.noQuota col:nth-child(4),
#usageTable.noQuota col:nth-child(5),
#usageTable.noQuota col:nth-child(7),
#usageTable.noQuota col:nth-child(8),
#usageTable.noQuota col:nth-child(10) {
	width: 0;
}

#usageTable tbody td:nth-child(3),
#usageTable tfoot td:nth-child(3),
#usageTable tbody td:nth-child(4),
#usageTable tbody td:nth-child(5),
#usageTable tbody td:nth-child(6),
#usageTable tfoot td:nth-child(6),
#usageTable tbody td:nth-child(7),
#usageTable tbody td:nth-child(8),
#usageTable tbody td:nth-child(9),
#historyTable tbody td:nth-child(2),
#historyTable tbody td:nth-child(3),
#historyTable tbody td:nth-child(4) {
	text-align: right;
	padding-right: 1em;
}

#usageTable tbody td:nth-child(10) {
	text-align: center;
	white-space: nowrap;
}

#usageTable tfoot>tr>td:not(:empty) {
	border-top: 3px double currentColor;
	padding: 0.5em 1em 0.5em 0.25em;
}

#perPage {
	float: left;
	padding-left: 1em;
}

#perPage select {
	border: 1px solid var(--perPageBorder);
	background-color: var(--perPageBG);
	color: var(--perPageFont);
	border-radius: 3px;
	padding: 5px;
	background-color: transparent;
	padding: 4px;
}

.download {
	background-repeat: no-repeat;
	background-position: 1em 0.25em;
	background-size: 1.5em 1.5em;
	padding: 0.5em 1em 0.5em 3.5em;
	margin-left: 1em;
	margin-bottom: 1em;
	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M40,0 v35 h-20 l30,30 l30,-30 h-20 v-35 z M0,70 v25 h100 v-25 h-30 l-20,15 l-20,-15 z' fill='%23000' stroke-linejoin='round' stroke-width='5' stroke='%23000' /%3E%3C/svg%3E");
}

